cdk.out/NetworkStack.template.json
{
 "Resources": {
  "demovpc6A63F275": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "NetworkStack/demo-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/demo-vpc/Resource"
   }
  },
  "demovpcpublicsubnet1Subnet1SubnetD97377BC": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "demovpc6A63F275"
    },
    "AvailabilityZone": "ap-southeast-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public-subnet-1"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack/demo-vpc/public-subnet-1Subnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/demo-vpc/public-subnet-1Subnet1/Subnet"
   }
  },
  "demovpcpublicsubnet1Subnet1RouteTableFA178F19": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "demovpc6A63F275"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "NetworkStack/demo-vpc/public-subnet-1Subnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/demo-vpc/public-subnet-1Subnet1/RouteTable"
   }
  },
  "demovpcpublicsubnet1Subnet1RouteTableAssociation10EDCF5E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "demovpcpublicsubnet1Subnet1RouteTableFA178F19"
    },
    "SubnetId": {
     "Ref": "demovpcpublicsubnet1Subnet1SubnetD97377BC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/demo-vpc/public-subnet-1Subnet1/RouteTableAssociation"
   }
  },
  "demovpcpublicsubnet1Subnet1DefaultRoute07588DCD": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "demovpcpublicsubnet1Subnet1RouteTableFA178F19"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "demovpcIGW56AC0B57"
    }
   },
   "DependsOn": [
    "demovpcVPCGWF2B48F8C"
   ],
   "Metadata": {
    "aws:cdk:path": "NetworkStack/demo-vpc/public-subnet-1Subnet1/DefaultRoute"
   }
  },
  "demovpcpublicsubnet1Subnet2SubnetBAC0E825": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "demovpc6A63F275"
    },
    "AvailabilityZone": "ap-southeast-1b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public-subnet-1"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack/demo-vpc/public-subnet-1Subnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/demo-vpc/public-subnet-1Subnet2/Subnet"
   }
  },
  "demovpcpublicsubnet1Subnet2RouteTable245A8A34": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "demovpc6A63F275"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "NetworkStack/demo-vpc/public-subnet-1Subnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/demo-vpc/public-subnet-1Subnet2/RouteTable"
   }
  },
  "demovpcpublicsubnet1Subnet2RouteTableAssociation9C61879E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "demovpcpublicsubnet1Subnet2RouteTable245A8A34"
    },
    "SubnetId": {
     "Ref": "demovpcpublicsubnet1Subnet2SubnetBAC0E825"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/demo-vpc/public-subnet-1Subnet2/RouteTableAssociation"
   }
  },
  "demovpcpublicsubnet1Subnet2DefaultRoute87CCFA03": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "demovpcpublicsubnet1Subnet2RouteTable245A8A34"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "demovpcIGW56AC0B57"
    }
   },
   "DependsOn": [
    "demovpcVPCGWF2B48F8C"
   ],
   "Metadata": {
    "aws:cdk:path": "NetworkStack/demo-vpc/public-subnet-1Subnet2/DefaultRoute"
   }
  },
  "demovpcpublicsubnet1Subnet3Subnet165F0B1C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "demovpc6A63F275"
    },
    "AvailabilityZone": "ap-southeast-1c",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public-subnet-1"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack/demo-vpc/public-subnet-1Subnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/demo-vpc/public-subnet-1Subnet3/Subnet"
   }
  },
  "demovpcpublicsubnet1Subnet3RouteTable6779F156": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "demovpc6A63F275"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "NetworkStack/demo-vpc/public-subnet-1Subnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/demo-vpc/public-subnet-1Subnet3/RouteTable"
   }
  },
  "demovpcpublicsubnet1Subnet3RouteTableAssociation0A2249BF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "demovpcpublicsubnet1Subnet3RouteTable6779F156"
    },
    "SubnetId": {
     "Ref": "demovpcpublicsubnet1Subnet3Subnet165F0B1C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/demo-vpc/public-subnet-1Subnet3/RouteTableAssociation"
   }
  },
  "demovpcpublicsubnet1Subnet3DefaultRoute272F6751": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "demovpcpublicsubnet1Subnet3RouteTable6779F156"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "demovpcIGW56AC0B57"
    }
   },
   "DependsOn": [
    "demovpcVPCGWF2B48F8C"
   ],
   "Metadata": {
    "aws:cdk:path": "NetworkStack/demo-vpc/public-subnet-1Subnet3/DefaultRoute"
   }
  },
  "demovpcprivatesubnetSubnet1Subnet19061EB3": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "demovpc6A63F275"
    },
    "AvailabilityZone": "ap-southeast-1a",
    "CidrBlock": "10.0.3.0/28",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private-subnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack/demo-vpc/private-subnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/demo-vpc/private-subnetSubnet1/Subnet"
   }
  },
  "demovpcprivatesubnetSubnet1RouteTableB2744116": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "demovpc6A63F275"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "NetworkStack/demo-vpc/private-subnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/demo-vpc/private-subnetSubnet1/RouteTable"
   }
  },
  "demovpcprivatesubnetSubnet1RouteTableAssociation52A04A51": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "demovpcprivatesubnetSubnet1RouteTableB2744116"
    },
    "SubnetId": {
     "Ref": "demovpcprivatesubnetSubnet1Subnet19061EB3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/demo-vpc/private-subnetSubnet1/RouteTableAssociation"
   }
  },
  "demovpcprivatesubnetSubnet2SubnetE3780BBD": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "demovpc6A63F275"
    },
    "AvailabilityZone": "ap-southeast-1b",
    "CidrBlock": "10.0.3.16/28",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private-subnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack/demo-vpc/private-subnetSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/demo-vpc/private-subnetSubnet2/Subnet"
   }
  },
  "demovpcprivatesubnetSubnet2RouteTableC03DFA2B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "demovpc6A63F275"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "NetworkStack/demo-vpc/private-subnetSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/demo-vpc/private-subnetSubnet2/RouteTable"
   }
  },
  "demovpcprivatesubnetSubnet2RouteTableAssociation0F963082": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "demovpcprivatesubnetSubnet2RouteTableC03DFA2B"
    },
    "SubnetId": {
     "Ref": "demovpcprivatesubnetSubnet2SubnetE3780BBD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/demo-vpc/private-subnetSubnet2/RouteTableAssociation"
   }
  },
  "demovpcprivatesubnetSubnet3SubnetD5FAF284": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "demovpc6A63F275"
    },
    "AvailabilityZone": "ap-southeast-1c",
    "CidrBlock": "10.0.3.32/28",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private-subnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack/demo-vpc/private-subnetSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/demo-vpc/private-subnetSubnet3/Subnet"
   }
  },
  "demovpcprivatesubnetSubnet3RouteTable004D01A8": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "demovpc6A63F275"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "NetworkStack/demo-vpc/private-subnetSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/demo-vpc/private-subnetSubnet3/RouteTable"
   }
  },
  "demovpcprivatesubnetSubnet3RouteTableAssociation252DAFC3": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "demovpcprivatesubnetSubnet3RouteTable004D01A8"
    },
    "SubnetId": {
     "Ref": "demovpcprivatesubnetSubnet3SubnetD5FAF284"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/demo-vpc/private-subnetSubnet3/RouteTableAssociation"
   }
  },
  "demovpcIGW56AC0B57": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "NetworkStack/demo-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/demo-vpc/IGW"
   }
  },
  "demovpcVPCGWF2B48F8C": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "demovpc6A63F275"
    },
    "InternetGatewayId": {
     "Ref": "demovpcIGW56AC0B57"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/demo-vpc/VPCGW"
   }
  },
  "demovpcRestrictDefaultSecurityGroupCustomResourceA7B27EE1": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "demovpc6A63F275",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "799671204862"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "NetworkStack/demo-vpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:ap-southeast-1:799671204862:security-group/",
             {
              "Fn::GetAtt": [
               "demovpc6A63F275",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-799671204862-ap-southeast-1",
     "S3Key": "e77031893275c08bcaa0a774aa8b611727afd045b3b5d8e1e6f0f04063d9d386.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs16.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "NetworkStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.e77031893275c08bcaa0a774aa8b611727afd045b3b5d8e1e6f0f04063d9d386",
    "aws:asset:property": "Code"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/22PTwvCMAzFP8vuXXUDxevwIN7KJrtK18WZ/WmlTTdE/O5WFHvxlJdfwntJzncbvk7k4lLVDumIDX9UJNXAAjqDyvmjvim2v+ha7JnwzYiq8o0GerOoSuMJTrIZIfLICueMQklo9G+ZCYuzJIgeR01ggz4Eusj7N/TbFRSuuk6g6clKcMZbFaK8IzPFNlj/HwlrZmzBsnAJUHiwQ909mTYt8N6t5mzHsy3Pkt4hptZrwgl4+akvl7oDMSMBAAA="
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack/CDKMetadata/Default"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
